--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,4 +26,8 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+
+    // Implement FTCLIB core and vision
+    implementation 'org.ftclib.ftclib:core:2.1.1'
+    implementation 'org.ftclib.ftclib:vision:2.1.0'
 }
