--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,6 @@ android.enableJetifier=true
 
 # Allow Gradle to use up to 3 GB of RAM
 org.gradle.jvmargs=-Xmx3072M
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
